name:                lss
version:             0.1.0.0
synopsis:            Lexical Style Sheets - a language for writing styles that is focused around lexical (ie, static) scoping and re-use of large components.
homepage:            https://github.com/dbp/lss
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010