name:                lss
version:             0.1.0.0
synopsis:            Lexical Style Sheets - a language for writing styles that is focused around lexical (ie, static) scoping and re-use of large components.
homepage:            https://github.com/dbp/lss
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8,
                       language-css >= 0.0.3 && <= 0.1,
                       language-css-attoparsec >= 0.0.3 && <= 0.1,
                       xmlhtml >= 0.1 && < 0.3,
                       heist,
                       snap,
                       text,
                       directory
  hs-source-dirs:      src/
  exposed-modules:
        Language.Lss,
        Snap.Snaplet.Lss
  default-language:    Haskell2010
