name:                snaplet-lss
version:             0.1.1.1
synopsis:            Lexical Style Sheets - Snap Web Framework adaptor.
homepage:            https://github.com/dbp/lss
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.5 && < 5,
                       lss >= 0.1 && < 0.3,
                       xmlhtml >= 0.1 && < 0.3,
                       heist >= 0.14,
                       snap,
                       lens,
                       text,
                       mtl,
                       directory,
                       filepath
  hs-source-dirs:      src/
  exposed-modules:
        Snap.Snaplet.Lss
  default-language:    Haskell2010

Test-Suite test-snaplet-lss
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  default-language:    Haskell2010
  build-depends: base >= 4.5 && < 5,
                 snap,
                 lens,
                 text,
                 hspec-snap,
                 hspec >= 2
  build-depends: snaplet-lss == 0.1.1.1
